--- a/css/styles.css
+++ b/css/styles.css
@@ -135,27 +135,16 @@ p {
     background-color: #fff;
 }
 
-.activity .block__wrapper {
-    position: relative;
-}
-
-.activity .block__wrapper .block::after {
-    color: #ccc;
-    content: '\203A';
-    font-size: 200%;
-    position: absolute;
-    right: 0.5em;
-    top: 0.2em;
-}
 
 .block {
     border-bottom: 1px solid #ddd;
+    cursor: pointer;
     margin: 0;
     overflow: hidden;
     padding-bottom: 1em;
+    padding: 1em 0;
     position: relative;
     width: calc(100%);
-    padding: 1em 0;
 }
 
 .block__wrapper:last-child .block {
@@ -257,7 +246,8 @@ a:hover {
 }
 
 .modal {
-    width: 450px;
+    width: 100%;
+    max-width: 450px;
     border-radius: 10px;
     border: 2px solid #ddd;
     margin: 2em auto;  
@@ -318,6 +308,18 @@ a:hover {
     background-color: #e9e9e9;
 } 
 
+.modal::after {
+    position: absolute;
+    content: " x ";
+    top: 1rem;
+    right: 1rem;
+    height: 25px;
+    width: 25px;
+    color: #333;
+    font-size: 1.2rem;
+    cursor: pointer;
+    }
+
 /** table break point */
 @media (min-width: 769px) {
 
@@ -374,6 +376,10 @@ a:hover {
     .block .city,
     .block p a {
         font-size: 14px;    
+    }
+
+    .modal {
+        width: 450px;
     }
     
 }
